# qrcode

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: mainwindow.h
ui/: mainwindow.ui
